# tokenprinter

./: .gitignore  Cargo.toml  README.md
src/: assemble.rs  cli.rs  config.rs  lib.rs  main.rs  model.rs  openrouter.rs  prices.json  pricing.rs  proc.rs  render.rs  transport.rs  watch.rs
src/adapters/: agy.rs  claude.rs  codex.rs  mod.rs  pi.rs
src/enrich/: beads.rs  git.rs  mod.rs
src/triggers/: hooks.rs  launchd.rs  mod.rs
tests/: real_data.rs
tests/fixtures/: agy_garbage.db  agy_session.db  claude_session.jsonl  codex_session.jsonl  codex_session_overcached.jsonl  pi_session.jsonl
