[package]
name = "tokenprinter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tokenprinter"
path = "src/main.rs"

[lib]
name = "tokenprinter"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
dirs = "5"
walkdir = "2"
rusb = "0.9"
wait-timeout = "0.2"

[dev-dependencies]
